Finish styling of splash page

--- a/app/views/users/splash.html.erb
+++ b/app/views/users/splash.html.erb
@@ -1,5 +1,6 @@
 <div class= 'splash'>
-  <h1 class= 'title grey'>My Budget</h1>
+  <%= image_tag "nda(1).png", alt: "nda icon", class: 'main-icon' %>
+  <h1 class= 'title grey'>Electrical/Electronic Engineering<br>Department</h1>
   <div class= 'login-signup'>
     <%= link_to 'LOG IN', new_user_session_path, class: 'splash-login' %>
     <%= link_to 'SIGN UP', new_user_registration_path, class: 'splash-signup' %>
