--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -69,12 +69,17 @@ a {
   flex-direction: column;
   align-items: center;
   padding: 0 15px;
-  margin-top: 30vh;
+  margin-top: 10vh;
+}
+
+.main-icon {
+  width: 20vw;
 }
 
 .title {
-  font-size: 2.8em;
+  font-size: 2.2em;
   font-family: 'Lobster', cursive;
+  text-align: center;
 }
 
 .login-signup {
