Fix lecturers forms

--- a/app/views/lecturers/_form.html.erb
+++ b/app/views/lecturers/_form.html.erb
@@ -37,6 +37,17 @@
   </div>
 
   <div>
+    <%= form.label :pic, style: "display: block" %>
+    <%= form.text_field :pic %>
+  </div>
+
+  <div>
+    <%= form.label :office, style: "display: block" %>
+    <%= form.text_field :office %>
+  </div>
+
+
+  <div>
     <%= form.submit %>
   </div>
 <% end %>
