--- a/app/views/lecturers/_lecturer.html.erb
+++ b/app/views/lecturers/_lecturer.html.erb
@@ -24,4 +24,15 @@
     <%= lecturer.doa %>
   </p>
 
+  <p>
+    <strong>Pic:</strong>
+    <%= image_tag "#{lecturer.pic}", alt: "#{lecturer.name} pic", class: 'main-icon' %>
+  </p>
+
+  <p>
+    <strong>Office:</strong>
+    <%= lecturer.office %>
+  </p>
+
+
 </div>
