Setup lecturers display page

--- a/app/views/bills/index.html.erb
+++ b/app/views/bills/index.html.erb
@@ -26,8 +26,8 @@
 </div>
 
 
-<%= link_to bills_path, class: 'white' do %>
-      <i class="fa-solid fa-arrow-left fa-2x white"></i>
+<%= link_to lecturers_path, class: 'grey' do %>
+      LECTURERS
     <% end %>
 
 <div id="bills">
