--- a/app/views/lecturers/_lecturer.html.erb
+++ b/app/views/lecturers/_lecturer.html.erb
@@ -1,38 +1,14 @@
-<div id="<%= dom_id lecturer %>">
-  <p>
-    <strong>Name:</strong>
-    <%= lecturer.name %>
-  </p>
+<div id="<%= dom_id lecturer %>" class= 'bills-list'>
+  <div class= 'bill-icon'>
+    <%= image_tag "#{lecturer.pic}", alt: "Bill icon", class: 'icon' %>
+  </div>
 
-  <p>
-    <strong>Email:</strong>
-    <%= lecturer.email %>
-  </p>
+  <div class= 'flex-column'>
+    <p class= 'text2'><%= lecturer.name %></p>
+    <p class= 'time'><%= lecturer.doa %></p>
+  </div>
 
-  <p>
-    <strong>Degrees:</strong>
-    <%= lecturer.degrees %>
-  </p>
-
-  <p>
-    <strong>Appointment:</strong>
-    <%= lecturer.appointment %>
-  </p>
-
-  <p>
-    <strong>Doa:</strong>
-    <%= lecturer.doa %>
-  </p>
-
-  <p>
-    <strong>Pic:</strong>
-    <%= image_tag "#{lecturer.pic}", alt: "#{lecturer.name} pic", class: 'main-icon' %>
-  </p>
-
-  <p>
-    <strong>Office:</strong>
-    <%= lecturer.office %>
-  </p>
-
-
+  <div class= 'bill-total'>
+    <p class= 'grey'><%= lecturer.office %></p>
+  </div>
 </div>
