--- a/app/views/lecturers/_lecturer.html.erb
+++ b/app/views/lecturers/_lecturer.html.erb
@@ -9,6 +9,6 @@
   </div>
 
   <div class= 'bill-total'>
-    <p class= 'grey'><%= lecturer.office %></p>
+    <p class= 'grey d-none'><%= lecturer.office %></p>
   </div>
 </div>
