--- a/app/views/bills/index.html.erb
+++ b/app/views/bills/index.html.erb
@@ -14,7 +14,9 @@
 </div>
 
 <div class= 'bills home text2'>
-  <%= image_tag "school.png", alt: "nda icon", class: 'home-icon' %>
+  <div class='img-container'>
+    <%= image_tag "school.png", alt: "nda icon", class: 'home-icon' %>
+  </div>
   <div>
     <h2>ELECTRICAL/ELECTRONIC ENGINEERING DEPARTMENT</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc at commodo nisl. Curabitur et sagittis justo. Nulla leo dolor, luctus eget aliquam porttitor</p>
