--- a/app/views/bills/index.html.erb
+++ b/app/views/bills/index.html.erb
@@ -49,5 +49,5 @@
 <div class= 'empty'></div>
 
 <div class= 'big'>
-    <%= link_to "CONTACT", 'uthmanbello88@gmail.com', class: 'white small' %>
+  <a href="mailto:uthmanbello88@gmail.com" class="white small">CONTACT</a>
 </div>
