--- a/app/views/lecturers/show.html.erb
+++ b/app/views/lecturers/show.html.erb
@@ -41,3 +41,9 @@
       </div>
     <% end %>
 </div>
+
+<div class= 'empty'></div>
+
+<div class= 'big'>
+  <a href="mailto:<%= @lecturer.email %>" class="white small">CONTACT</a>
+</div>
