Style add lecturer page

--- a/app/views/lecturers/_form.html.erb
+++ b/app/views/lecturers/_form.html.erb
@@ -11,43 +11,58 @@
     </div>
   <% end %>
 
-  <div>
-    <%= form.label :name, style: "display: block" %>
-    <%= form.text_field :name %>
+  <div class='login'>
+    <%= link_to lecturers_path do %>
+      <i class="fa-solid fa-arrow-left fa-2x white"></i>
+    <% end %>
+
+    <p>NEW LECTURER</p>
+    <div>
+      <%= form.submit 'Save', class: 'submit-button' %>
+    </div>
   </div>
 
-  <div>
-    <%= form.label :email, style: "display: block" %>
-    <%= form.text_field :email %>
+  <div class='login-fields'>
+    <div class="field login-field text1 padding">
+      <%= form.label :name, style: "display: block" %>
+      <%= form.text_field :name, class: 'input-field' %>
+      <hr class= 'rule'>    
+    </div>
+
+    <div class="field login-field text1 padding">
+      <%= form.label :email, style: "display: block" %>
+      <%= form.text_field :email, class: 'input-field' %>
+      <hr class= 'rule'>    
+    </div>
+
+    <div class="field login-field text1 padding">
+      <%= form.label :degress, style: "display: block" %>
+      <%= form.text_field :degrees, class: 'input-field' %>
+      <hr class= 'rule'>    
+    </div>
+
+    <div class="field login-field text1 padding">
+      <%= form.label :appointment, style: "display: block" %>
+      <%= form.text_field :appointment, class: 'input-field' %>
+      <hr class= 'rule'>    
+    </div>
+
+    <div class="field login-field text1 padding">
+      <%= form.label :doa, style: "display: block" %>
+      <%= form.text_field :doa, class: 'input-field' %>
+      <hr class= 'rule'>    
+    </div>
+
+    <div class="field login-field text1 padding">
+      <%= form.label :pic, style: "display: block" %>
+      <%= form.text_field :pic, class: 'input-field' %>
+      <hr class= 'rule'>    
+    </div>
+
+    <div class="field login-field text1 padding">
+      <%= form.label :office, style: "display: block" %>
+      <%= form.text_field :office, class: 'input-field' %>   
+    </div>
   </div>
 
-  <div>
-    <%= form.label :degrees, style: "display: block" %>
-    <%= form.text_field :degrees %>
-  </div>
-
-  <div>
-    <%= form.label :appointment, style: "display: block" %>
-    <%= form.text_field :appointment %>
-  </div>
-
-  <div>
-    <%= form.label :doa, style: "display: block" %>
-    <%= form.text_field :doa %>
-  </div>
-
-  <div>
-    <%= form.label :pic, style: "display: block" %>
-    <%= form.text_field :pic %>
-  </div>
-
-  <div>
-    <%= form.label :office, style: "display: block" %>
-    <%= form.text_field :office %>
-  </div>
-
-
-  <div>
-    <%= form.submit %>
-  </div>
 <% end %>
