--- a/app/views/lecturers/new.html.erb
+++ b/app/views/lecturers/new.html.erb
@@ -1,1 +1,8 @@
+<div class='login'>
+  <%= link_to lecturers_path do %>
+    <i class="fa-solid fa-arrow-left fa-2x white"></i>
+  <% end %>
+  <p>NEW LECTURER</p>
+  <div></div>
+</div>
 <%= render "form", lecturer: @lecturer %>
