--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -366,6 +366,13 @@ a {
   margin-bottom: 2vh;
 }
 
+.form-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 2vh;
+}
+
 .d-none {
   display: none;
 }
