--- a/app/views/lecturers/index.html.erb
+++ b/app/views/lecturers/index.html.erb
@@ -12,7 +12,7 @@
 
 <div id="lecturers">
   <div class= 'budget'>
-    <p class= 'text2'>Total no. of Lecturers</p>
+    <p class= 'text2'>Total no. of lecturers</p>
     <p class= 'grey'><%= @lecturers.count %></p>
   </div>
   <% @lecturers.each do |lecturer| %>
