--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -184,7 +184,7 @@ a {
 }
 
 .icon {
-  width: 23vw;
+  width: 28vw;
   height: 12vh;
   padding-right: 10px;
 }
@@ -222,15 +222,11 @@ a {
 .flex-column {
   display: flex;
   flex-direction: column;
-  flex-basis: 60%;
-}
-
-.bill-total {
-  flex-basis: 10%;
+  flex-basis: 65%;
 }
 
 .bill-icon {
-  flex-basis: 30%;
+  flex-basis: 35%;
 }
 
 .time {
@@ -346,6 +342,7 @@ a {
   padding-top: 2vw;
   padding-bottom: 2vw;
   border: none;
+  border-radius: 4px;
   background-color: red;
   color: #fff;
   display: flex;
@@ -385,11 +382,70 @@ a {
   .splash {
     margin-top: 10vh;
   }
+
+  .home {
+    display: flex;
+    flex-direction: row;
+    gap: 10vw;
+  }
+
+  .home-icon {
+    width: 25vw;
+    height: 25vw;
+    padding-bottom: 2vw;
+  }
   
   .icon {
     width: 8vw;
     height: 15vh;
     padding-right: 10px;
+  }
+
+  .flex-column {
+    display: flex;
+    flex-direction: column;
+    flex-basis: 50%;
+  }
+  
+  .bill-total {
+    flex-basis: 20%;
+  }
+  
+  .bill-icon {
+    flex-basis: 10%;
+  }
+
+  .appoint {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-basis: 20%;
+  }
+  
+
+  .edit-btn {
+    width: 10vw;
+    padding-top: 0.7vw;
+    padding-bottom: 0.7vw;
+  }
+
+  .delete-btn {
+    width: 10vw;
+    padding-top: 0.7vw;
+    padding-bottom: 0.7vw;
+  }
+
+  .btn-border {
+    border: 1px solid #fff;
+    width: 9vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .form-btn {
+    margin-top: 2vh;
+    margin-bottom: 2vh;
   }
 
   .d-none {
