Setup programs page

--- a/app/views/bills/index.html.erb
+++ b/app/views/bills/index.html.erb
@@ -32,6 +32,10 @@
   LECTURERS
 <% end %>
 
+<%= link_to programs_path, class: 'grey' do %>
+  PROGRAMS
+<% end %>
+
 <div class= 'empty'></div>
 
 <div class= 'big'>
