--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -370,6 +370,13 @@ a {
   margin-top: 2vh;
 }
 
+.programs {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 .d-none {
   display: none;
 }
