--- a/app/views/programs/index.html.erb
+++ b/app/views/programs/index.html.erb
@@ -18,4 +18,10 @@
   <% end %>
 </div>
 
-<%# <%= link_to "New program", new_program_path  %>
+<%# <%= link_to new_program_path do %> 
+  <%# <div class='edit-btn new-btn'>
+    <div class='btn-border'>
+      NEW
+    </div>
+  </div> %>
+<%# <% end %> 
