--- a/app/views/options/_form.html.erb
+++ b/app/views/options/_form.html.erb
@@ -11,22 +11,29 @@
     </div>
   <% end %>
 
-  <div>
-    <%= form.label :name, style: "display: block" %>
-    <%= form.text_field :name %>
+  <div class='login-fields'>
+    <div class="field login-field text1 padding">
+      <%= form.label :name, style: "display: block" %>
+      <%= form.text_field :name, class: 'input-field' %>
+      <hr class= 'rule'>    
+    </div>
+
+    <div class="field login-field text1 padding">
+      <%= form.label :option_type, style: "display: block" %>
+      <%= form.text_field :option_type, class: 'input-field' %>
+      <hr class= 'rule'>  
+    </div>
+
+    <div class="field login-field text1 padding">
+      <% @programs = Program.all %>
+      <%= form.select :program_id, options_from_collection_for_select(@programs, :id, :name, params[:program_id]), { prompt: "Select Program" }, class: "form-select input-field prompt" %>
+    </div>
   </div>
 
-  <div class="field login-field text1 padding">
-    <% @programs = Program.all %>
-    <%= form.select :program_id, options_from_collection_for_select(@programs, :id, :name, params[:program_id]), { prompt: "Select Program" }, class: "form-select input-field prompt" %>
+  <div class='form-btn'>
+    <div class='edit-btn'>
+      <%= form.submit 'Save', class: 'submit-button' %>
+    </div>
   </div>
 
-  <div>
-    <%= form.label :option_type, style: "display: block" %>
-    <%= form.text_field :option_type %>
-  </div>
-
-  <div>
-    <%= form.submit %>
-  </div>
 <% end %>
