--- a/app/views/options/_option.html.erb
+++ b/app/views/options/_option.html.erb
@@ -1,17 +1,6 @@
 <div id="<%= dom_id option %>">
-  <p>
-    <strong>Name:</strong>
-    <%= option.name %>
-  </p>
-
-  <p>
-    <strong>Program:</strong>
-    <%= option.program_id %>
-  </p>
-
-  <p>
-    <strong>Type:</strong>
-    <%= option.option_type %>
-  </p>
-
+  <div class= 'flex-column'>
+    <p class= 'text2'><%= option.name %></p>
+    <p class= 'time'><%= option.option_type %></p>
+  </div>
 </div>
