--- a/app/views/options/new.html.erb
+++ b/app/views/options/new.html.erb
@@ -1,9 +1,10 @@
-<h1>New option</h1>
+<div class='login'>
+  <%= link_to programs_path do %>
+    <i class="fa-solid fa-arrow-left fa-2x white"></i>
+  <% end %>
+
+  <p>NEW OPTION</p>
+  <div></div>
+</div>
 
 <%= render "form", option: @option %>
-
-<br>
-
-<div>
-  <%= link_to "Back to options", options_path %>
-</div>
