--- a/app/views/programs/_form.html.erb
+++ b/app/views/programs/_form.html.erb
@@ -11,22 +11,29 @@
     </div>
   <% end %>
 
-  <div>
-    <%= form.label :name, style: "display: block" %>
-    <%= form.text_field :name %>
+  <div class='login-fields'>
+    <div class="field login-field text1 padding">
+      <%= form.label :name, style: "display: block" %>
+      <%= form.text_field :name, class: 'input-field' %>
+      <hr class= 'rule'>    
+    </div>
+
+    <div class="field login-field text1 padding">
+      <%= form.label :image, style: "display: block" %>
+      <%= form.text_field :image, class: 'input-field' %>
+      <hr class= 'rule'>    
+    </div>
+
+    <div class="field login-field text1 padding">
+      <%= form.label :establish, style: "display: block" %>
+      <%= form.text_field :establish, class: 'input-field' %>   
+    </div>
   </div>
 
-  <div>
-    <%= form.label :image, style: "display: block" %>
-    <%= form.text_field :image %>
+  <div class='form-btn'>
+    <div class='edit-btn'>
+      <%= form.submit 'Save', class: 'submit-button' %>
+    </div>
   </div>
 
-  <div>
-    <%= form.label :establish, style: "display: block" %>
-    <%= form.text_field :establish %>
-  </div>
-
-  <div>
-    <%= form.submit %>
-  </div>
 <% end %>
