Style add program page

--- a/app/views/programs/index.html.erb
+++ b/app/views/programs/index.html.erb
@@ -18,10 +18,8 @@
   <% end %>
 </div>
 
-<%# <%= link_to new_program_path do %> 
-  <%# <div class='edit-btn new-btn'>
-    <div class='btn-border'>
-      NEW
-    </div>
-  </div> %>
-<%# <% end %> 
+<div class= 'empty'></div>
+
+<div class= 'big'>
+  <%= link_to "ADD", new_program_path, class: 'white small' %>
+</div>
