--- a/app/views/programs/new.html.erb
+++ b/app/views/programs/new.html.erb
@@ -1,9 +1,10 @@
-<h1>New program</h1>
+<div class='login'>
+  <%= link_to programs_path do %>
+    <i class="fa-solid fa-arrow-left fa-2x white"></i>
+  <% end %>
+
+  <p>NEW PROGRAM</p>
+  <div></div>
+</div>
 
 <%= render "form", program: @program %>
-
-<br>
-
-<div>
-  <%= link_to "Back to programs", programs_path %>
-</div>
