Setup lecturer forms

--- a/app/views/lecturers/edit.html.erb
+++ b/app/views/lecturers/edit.html.erb
@@ -1,5 +1,5 @@
 <div class='login'>
-  <%= link_to lecturer_path do %>
+  <%= link_to bills_admin_path do %>
     <i class="fa-solid fa-arrow-left fa-2x white"></i>
   <% end %>
 
