--- a/app/views/options/edit.html.erb
+++ b/app/views/options/edit.html.erb
@@ -1,10 +1,10 @@
-<h1>Editing option</h1>
+<div class='login'>
+  <%= link_to bills_admin_path do %>
+    <i class="fa-solid fa-arrow-left fa-2x white"></i>
+  <% end %>
+
+  <p>EDIT OPTION</p>
+  <div></div>
+</div>
 
 <%= render "form", option: @option %>
-
-<br>
-
-<div>
-  <%= link_to "Show this option", @option %> |
-  <%= link_to "Back to options", options_path %>
-</div>
