Setup courses links

--- a/app/views/courses/new.html.erb
+++ b/app/views/courses/new.html.erb
@@ -1,9 +1,10 @@
-<h1>New course</h1>
+<div class='login'>
+  <%= link_to bills_admin_path do %>
+    <i class="fa-solid fa-arrow-left fa-2x white"></i>
+  <% end %>
+
+  <p>NEW COURSE</p>
+  <div></div>
+</div>
 
 <%= render "form", course: @course %>
-
-<br>
-
-<div>
-  <%= link_to "Back to courses", courses_path %>
-</div>
