--- a/app/views/courses/_form.html.erb
+++ b/app/views/courses/_form.html.erb
@@ -11,37 +11,47 @@
     </div>
   <% end %>
 
-  <div>
-    <%= form.label :code, style: "display: block" %>
-    <%= form.text_field :code %>
-  </div>
+  <div class='login-fields'>
+    <div class="field login-field text1 padding">
+      <%= form.label :code, style: "display: block" %>
+      <%= form.text_field :code, class: 'input-field' %>
+      <hr class= 'rule'>    
+    </div>
 
-  <div>
-    <%= form.label :title, style: "display: block" %>
-    <%= form.text_field :title %>
-  </div>
+    <div class="field login-field text1 padding">
+      <%= form.label :title, style: "display: block" %>
+      <%= form.text_field :title, class: 'input-field' %>
+      <hr class= 'rule'>  
+    </div>
 
-  <div>
-    <%= form.label :units, style: "display: block" %>
-    <%= form.number_field :units %>
-  </div>
+    <div class="field login-field text1 padding">
+      <%= form.label :units, style: "display: block" %>
+      <%= form.number_field :units, class: 'input-field' %>
+      <hr class= 'rule'>  
+    </div>
 
-  <div>
-    <%= form.label :semester, style: "display: block" %>
-    <%= form.text_field :semester %>
-  </div>
+    <div class="field login-field text1 padding">
+      <%= form.label :semester, style: "display: block" %>
+      <%= form.text_field :semester, class: 'input-field' %>
+      <hr class= 'rule'>  
+    </div>
 
-  <div>
-    <%= form.label :year, style: "display: block" %>
-    <%= form.number_field :year %>
-  </div>
+    <div class="field login-field text1 padding">
+      <%= form.label :year, style: "display: block" %>
+      <%= form.number_field :year, class: 'input-field' %>
+      <hr class= 'rule'>  
+    </div>
 
-  <div class="field login-field text1 padding">
+    <div class="field login-field text1 padding">
       <% @options = Option.all %>
       <%= form.select :option_id, options_from_collection_for_select(@options, :id, :name, params[:option_id]), { prompt: "Select Option" }, class: "form-select input-field prompt" %>
     </div>
-
-  <div>
-    <%= form.submit %>
   </div>
+
+  <div class='form-btn'>
+    <div class='edit-btn'>
+      <%= form.submit 'Save', class: 'submit-button' %>
+    </div>
+  </div>
+
 <% end %>
