--- a/app/views/courses/edit.html.erb
+++ b/app/views/courses/edit.html.erb
@@ -1,10 +1,10 @@
-<h1>Editing course</h1>
+<div class='login'>
+  <%= link_to bills_admin_path do %>
+    <i class="fa-solid fa-arrow-left fa-2x white"></i>
+  <% end %>
+
+  <p>EDIT COURSE</p>
+  <div></div>
+</div>
 
 <%= render "form", course: @course %>
-
-<br>
-
-<div>
-  <%= link_to "Show this course", @course %> |
-  <%= link_to "Back to courses", courses_path %>
-</div>
