--- a/app/views/programs/_program.html.erb
+++ b/app/views/programs/_program.html.erb
@@ -1,7 +1,7 @@
 <div id="<%= dom_id program %>">
-  <div class= 'bills home text2'>
+  <div class= 'bills text2 programs-desk'>
     <div class='img-container programs'>
-      <%= image_tag "#{program.image}.png", alt: "#{program.name}", class: 'home-icon' %>
+      <%= image_tag "#{program.image}.png", alt: "#{program.name}", class: 'home-icon program-img' %>
       <p>Established: <%= program.establish %></p>
     </div>
   </div>
