--- a/app/views/bills/index.html.erb
+++ b/app/views/bills/index.html.erb
@@ -36,6 +36,10 @@
   PROGRAMS
 <% end %>
 
+<%= link_to semesters_path, class: 'grey' do %>
+  GRADING
+<% end %>
+
 <%= link_to bills_admin_path, class: 'grey' do %>
   ADMIN
 <% end %>
