Setup classes for grading

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -395,6 +395,12 @@ a {
   align-items: center;
 }
 
+.grad-classes {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
 .d-none {
   display: none;
 }
