Setup courses for grad classes

--- a/app/views/gradclasses/show.html.erb
+++ b/app/views/gradclasses/show.html.erb
@@ -1,10 +1,29 @@
-<p style="color: green"><%= notice %></p>
-
-<%= render @gradclass %>
-
-<div>
-  <%= link_to "Edit this gradclass", edit_gradclass_path(@gradclass) %> |
-  <%= link_to "Back to gradclasses", gradclasses_path %>
-
-  <%= button_to "Destroy this gradclass", @gradclass, method: :delete %>
+<div class='login'>
+  <div>
+    <%= link_to gradclass_path(@gradclass.semester), class: 'white' do %>
+      <i class="fa-solid fa-arrow-left fa-2x white"></i>
+    <% end %>
+  </div>
+  <div>
+    <p class='caps'><%= @gradclass.name %> LEVEL - <%= @gradclass.semester.name %> SEMESTER</p>
+  </div>
+  <div class= 'empty-div'></div>
 </div>
+
+<div id="gradcourses">
+  <% @gradcourses.each do |gradcourse| %>
+    <%= link_to gradcourse do %>
+      <%= render gradcourse %>
+    <% end %>
+  <% end %>
+</div>
+
+<%# <%= link_to "New gradcourse", new_gradcourse_path %> 
+
+
+<%# <div> %>
+  <%# <%= link_to "Edit this gradclass", edit_gradclass_path(@gradclass)  %>
+  <%# <%= link_to "Back to gradclasses", gradclasses_path  %>
+
+  <%# <%= button_to "Destroy this gradclass", @gradclass, method: :delete  %>
+<%# </div> %>
