--- a/app/views/semesters/index.html.erb
+++ b/app/views/semesters/index.html.erb
@@ -12,7 +12,7 @@
 
 <div class= 'budget'>
   <p class= 'text2'>2023</p>
-  <p class= 'text2'>2022/2023 Session</p>
+  <p class= 'text2'>2022/2023</p>
 </div>
 
 <div id="semesters">
