Setup link back to classes

--- a/app/views/gradclasses/show.html.erb
+++ b/app/views/gradclasses/show.html.erb
@@ -1,6 +1,6 @@
 <div class='login'>
   <div>
-    <%= link_to gradclass_path(@gradclass.semester), class: 'white' do %>
+    <%= link_to semester_path(@gradclass.semester), class: 'white' do %>
       <i class="fa-solid fa-arrow-left fa-2x white"></i>
     <% end %>
   </div>
