--- a/app/views/gradcourses/_gradcourse.html.erb
+++ b/app/views/gradcourses/_gradcourse.html.erb
@@ -4,7 +4,7 @@
       <p class= 'text2'><%= gradcourse.title %></p>
       <p class= 'time'><%= gradcourse.code %></p>
     </div>
-    <p class= 'grey'><%= gradcourse.units %></p>
+    <p class= 'grey'><%= gradcourse.units %> units</p>
   </div>
 
 </div>
