--- a/app/views/gradcourses/show.html.erb
+++ b/app/views/gradcourses/show.html.erb
@@ -30,6 +30,15 @@
 
 <%= link_to "Gradstudent", new_gradstudent_path %>
 
+<p style="color: green"><%= notice %></p>
+
+<h1>Grades</h1>
+
+
+
+<%= link_to "New grade", new_grade_path %>
+
+
 <%# <%= link_to "Show this cadet", cadet %> 
 
 <%# <%= link_to "New cadet", new_cadet_path %>
