--- a/app/views/gradstudents/_gradstudent.html.erb
+++ b/app/views/gradstudents/_gradstudent.html.erb
@@ -6,39 +6,39 @@
       <p class= 'text2'><%= gradstudent.service %></p>
       <p class= 'text2'><%= gradstudent.name %></p>
     </div>
-    <div class='flex-row space'>
-    <div class="field login-field text1">
-      <%= form.number_field :ca1, class: 'grading-field' %>
+    <div class='space'>
+    <div class="field login-field text1 padding">
+      <%= form.number_field :ca1, class: 'grading-field', placeholder: '--' %>
     </div>
 
     <div class="field login-field text1 padding">
-      <%= form.number_field :ca2, class: 'grading-field' %>
+      <%= form.number_field :ca2, class: 'grading-field', placeholder: '--' %>
     </div>
 
     <div class="field login-field text1 padding">
-      <%= form.number_field :exam, class: 'grading-field' %>
+      <%= form.number_field :exam, class: 'grading-field', placeholder: '--' %>
     </div>
 
-    <div class="field login-field text1 padding">
-      <%= form.number_field :total, class: 'grading-field' %>
+    <div class="field login-field grey padding">
+      <%= form.number_field :total, class: 'constant-field', readonly: true, placeholder: 'Tot' %>
     </div>
 
-    <div class="field login-field text1 padding">
-      <%= form.text_field :grade, class: '' %>
+    <div class="field login-field grey padding">
+      <%= form.text_field :grade, class: 'constant-field', readonly: true, placeholder: 'Gra' %>
     </div>
 
-    <%= form.hidden_field :course_id %>
-    <%= form.hidden_field :student_id %>
+    <%= form.hidden_field :gradcourse_id, value: @gradcourse.id %>
+    <%= form.hidden_field :gradstudent_id, value: gradstudent.id %>
+
+    <%= gradstudent.id%>
+    <%= @gradcourse.id %>
+
+    <div>
+      <%= form.submit %>
+    </div>
+    
   </div>
 </div>
 
 </div>
 <%end%>
-
-<%= form_with(model: @grade) do |form| %>
-
-  
-  <div>
-    <%= form.submit %>
-  </div>
-<% end %>
