Add hamburger button

--- a/app/views/bills/index.html.erb
+++ b/app/views/bills/index.html.erb
@@ -1,5 +1,23 @@
+<div class="sliding-menu">
+  <%= link_to lecturers_path, class: 'white' do %>
+    Lecturers
+  <% end %>
+
+  <%= link_to programs_path, class: 'white' do %>
+    Programs
+  <% end %>
+
+  <%= link_to semesters_path, class: 'white' do %>
+    Grading
+  <% end %>
+
+  <%= link_to bills_admin_path, class: 'white' do %>
+    Admin
+  <% end %>
+</div>
+
 <div class='login'>
-  <div class= 'bars'>
+  <div class= 'bars hamburger'>
     <span class= 'bar'></span>
     <span class= 'bar'></span>
     <span class= 'bar'></span>
